# cloth-sim

./: CMakeLists.txt  main.cpp
cmake/: FindLIBIGL.cmake
include/: MassSpringsModel.h  Model.h  linearly_implicit_euler.h  mass_matrix.h  shear.h  stretch.h  w_matrix.h
src/: MassSpringsModel.cpp  mass_matrix.cpp  mass_matrix.cpp~  shear.cpp  stretch.cpp  w_matrix.cpp
